fix map on small devices and beautify biopic style

--- a/css/style.css
+++ b/css/style.css
@@ -201,9 +201,11 @@ ul {
 
 .biopic {
   float: right;
-  padding: 0;
+  padding: 5px;
   width: 160px;
-  border: none;
+  height: 160px;
+  border: 1px #fef6eb solid;
+  border-radius: 85px;
   display: none;
   margin-top: 20px;
 }
@@ -218,6 +220,18 @@ img {
 
 span {
   padding: 5px;
+}
+
+#map {
+  display: block;
+  height: 100%;
+  margin: 0 5%;
+}
+
+#mapDiv {
+  height: 400px;
+  width: 100%;
+  padding-bottom: 5%;
 }
 
 #lets-connect {
@@ -257,18 +271,6 @@ span {
   }
 }
 
-#map {
-  display: block;
-  height: 100%;
-  margin: 0 5%;
-}
-
-#mapDiv {
-  height: 400px;
-  width: 100%;
-  padding-bottom: 5%;
-}
-
 @media only screen and (min-width: 750px) {
   #skills-h3,
   .biopic {
@@ -284,5 +286,14 @@ span {
   }
   .subtitle {
     padding-left: 5px;
+  }
+  #map {
+    height: 95%;
+  }
+}
+
+@media only screen and (max-width: 350px) {
+  #map {
+    height: 90%;
   }
 }
